se agregan caracteristicas al index

--- a/index/templates/index.html
+++ b/index/templates/index.html
@@ -13,6 +13,9 @@
       <ul id="navigation">
         <li><a href="/app_animal/animal/">Animales</a></li>
         <li><a href="/app_veterinaria/veterinaria/">Veterinarias</a></li>
+        <li><a href="/app_dueno/dueno/">Dueños</a></li>
+        <li><a href="/app_consulta_procedimiento/consulta_procedimiento/">Consulta proc.</a></li>
+        <li><a href="/app_consulta_reserva/consulta_reserva/">Consulta reserva</a></li>
         <li><a href="/admin/">Django Admin</a></li>
       </ul>
     </div>
