--- a/index/templates/index.html
+++ b/index/templates/index.html
@@ -12,11 +12,10 @@
       <h1><a href="#">API PetPlus</a></h1>
       <ul id="navigation">
         <li><a href="/app_animal/animal/">Animales</a></li>
-        <li><a href="/app_veterinaria/veterinaria/">Veterinarias</a></li>
+        <li><a href="/app_veterinaria/veterinaria/">Vets</a></li>
         <li><a href="/app_dueno/dueno/">Dueños</a></li>
-        <li><a href="/app_consulta_procedimiento/consulta_procedimiento/">Consulta proc.</a></li>
-        <li><a href="/app_consulta_reserva/consulta_reserva/">Consulta reserva</a></li>
-        <li><a href="/admin/">Django Admin</a></li>
+        <li><a href="/app_consulta_procedimiento/consulta_procedimiento/">Proc.</a></li>
+        <li><a href="/admin/">Admin</a></li>
       </ul>
     </div>
   </div>
